# FrogQuant

./: .gitignore  CMakeLists.txt  README.md
_trash/2026-03-16-cleanup/: CLEANUP_MANIFEST.md
config/: engine.example.yaml  engine.yaml  engine.yaml.example
cpp/include/app/: app_support.hpp  bootstrap.hpp  control_api_router.hpp  run_guard.hpp  runtime_loop.hpp
cpp/include/control/: local_http_server.hpp
cpp/include/core/: app_config.hpp  oms.hpp  order_types.hpp  risk_engine.hpp  trading_core.hpp
cpp/include/execution/: binance_testnet_execution.hpp
cpp/include/logger/: async_jsonl_logger.hpp  log_event.hpp
cpp/include/market/: binance_rest_client.hpp  binance_ws_client.hpp  market_data_service.hpp  market_types.hpp
cpp/include/strategy/: long_grid_strategy.hpp
cpp/src/app/: app_support.cpp  bootstrap.cpp  control_api_router.cpp  main.cpp  run_guard.cpp  runtime_loop.cpp
cpp/src/bench/: benchmark_trading_core.cpp
cpp/src/control/: local_http_server.cpp
cpp/src/core/: app_config.cpp  oms.cpp  risk_engine.cpp  trading_core.cpp
cpp/src/execution/: binance_testnet_execution.cpp
cpp/src/logger/: async_jsonl_logger.cpp
cpp/src/market/: binance_rest_client.cpp  binance_ws_client.cpp  market_data_service.cpp
cpp/src/strategy/: long_grid_strategy.cpp
cpp/tests/: test_async_logger.cpp  test_execution_module.cpp  test_long_grid_strategy.cpp  test_market_parser.cpp  test_risk_oms_core.cpp
deploy/: frogquant-healthcheck.service  frogquant-healthcheck.timer  frogquant.env.example  frogquant.logrotate  frogquant.service  healthcheck.sh  install_service.sh
docs/: acceptance_checklist.md  architecture_market_v1.md  async_logger_module.md  benchmark_trading_core.md  change_log.md  config_and_runtime_policy.md  config_vs_client_mutability.md  execution_module.md  module_map.md  qt_client_setup_qt5_15.md  qt_control_api_v1.md  risk_oms_module.md  server_deployment_long_running.md  strategy_long_grid_module.md
qt_client/: CMakeLists.txt  frogquant_qt_client.pro
qt_client/src/: api_client.cpp  api_client.hpp  i18n.hpp  main.cpp  main_window.cpp  main_window.hpp
qt_client/src/pages/: dashboard_page.cpp  dashboard_page.hpp  logs_page.cpp  logs_page.hpp  strategy_page.cpp  strategy_page.hpp  trading_page.cpp  trading_page.hpp
scripts/: build_and_run.sh
